--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\" "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.2",
+    "concurrently": "^6.0.2",
     "nodemon": "^2.0.7"
   }
 }
