--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/morgan": "^1.9.2",
     "concurrently": "^6.0.2",
     "nodemon": "^2.0.7"
