--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "start": "concurrently \"tsc -w\" \"nodemon dist/index.js\" ",
     "test": "test",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\" "
+    "pull": "git --version"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
