iniciando con la configuracion de jest

--- a/.env_example
+++ b/.env_example
@@ -1,13 +1,29 @@
 #Token secreto para la encriptacion de datos
-TOKEN_SECRETO="prueba123"
+token="prueba123"
 
 #Puerto en el que correra la aplicacions
-PUERTO_EXPRESS=3000
+express_puerto=3000
 
 #Configuracion Base de datos
-MOTOR_BASE_DATOS="postgres"
-HOST=""
-PUERTO_BASE=""
-BASE_DATOS_TEST=""
-BASE_DATOS_PRODUCCION=""
+motor_bd="postgres"
 
+#DEV
+host_dev=""
+purto_bd_dev=""
+bd_dev=""
+usuario_dev=""
+password_dev=""
+
+#PRODUCCION
+host_prod=""
+purto_bd_prod=""
+bd_prod=""
+usuario_prod=""
+password_prod=""
+
+#TEST
+host_test=""
+purto_bd_test=""
+bd_test=""
+usuario_test=""
+password_test=""
