--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/morgan": "^1.9.2",
     "concurrently": "^6.0.2",
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
