--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "concurrently \"tsc -w\" \"nodemon dist/index.js\" ",
-    "test": "test",
+    "test": "jest",
     "pull": "git --version"
   },
   "author": "",
@@ -26,11 +26,13 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
     "concurrently": "^6.0.2",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5"
   },
   "jest": {
     "testEnvironment": "node",
