--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "concurrently": "^6.0.2",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "sequelize-auto": "^0.8.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.5"
   },
