--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"tsc -w\" \"nodemon dist/index.js\" ",
+    "start": "concurrently \"nodemon index.js\" ",
     "test": "jest",
     "pull": "git --version"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -21,19 +18,14 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0",
-    "typescript": "^4.2.4"
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^26.0.22",
-    "@types/morgan": "^1.9.2",
     "concurrently": "^6.0.2",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "sequelize-auto": "^0.8.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.5"
+    "supertest": "^6.1.3"
   },
   "jest": {
     "testEnvironment": "node",
