--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 #Token secreto para la encriptacion de datos
-TOKEN="prueba123"
+TOKEN="oLdU0bUdvxDFHZTsssD5VIZKgBSCle5t"
 
 #Puerto en el que correra la aplicacions
 EXPRESS_PORT=3000
+
+#prefijo para la publicacion de endpoints
+PREFIJO="api"
