refactorizando: eliminacion de modelos y reconstruccion de servicios

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ EXPRESS_PORT=3000
 
 #prefijo para la publicacion de endpoints
 PREFIJO="api"
+
+#dominio que se dejara acceder a la aplicacion desde url externas
+DOMAIN="*"
