--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ PREFIJO="api"
 
 #dominio que se dejara acceder a la aplicacion desde url externas
 DOMAIN="*"
+
+#tiempo que estara activo el token por usuario
+TIME_VALID="30d"
